RESOLVED FIXED15906
getting characters by indexing into a string is very slow
https://bugs.webkit.org/show_bug.cgi?id=15906
Summary getting characters by indexing into a string is very slow
Darin Adler
Reported 2007-11-08 14:47:12 PST
I have a number of fixes that will speed up SunSpider a lot.
Attachments
patch (8.33 KB, patch)
2007-11-08 17:05 PST, Darin Adler
mjs: review+
Darin Adler
Comment 1 2007-11-08 17:05:39 PST
Maciej Stachowiak
Comment 2 2007-11-08 19:11:41 PST
Comment on attachment 17134 [details] patch r=me
Darin Adler
Comment 3 2007-11-08 21:53:33 PST
Committed revision 27633.
Eric Seidel (no email)
Comment 4 2007-11-09 00:57:07 PST
Very nice. I wonder where else this could be deployed.
Note You need to log in before you can comment on or make changes to this bug.